@@ -7,6 +7,7 @@ Version 6.0.5 - not yet released
   - EWMicroRecorder: fix hang during task declaration
 * Android
   - fix bitmap loading on Samsung Galaxy Tab
+  - show Bluetooth device names in configuration dialog
 
 Version 6.0.4 - 2011/02/19
 * devices
